# local_library_website

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-entrypoint.sh  pyproject.toml
architecture/: architecture.md  diagram.py
deployment/djangoapp/base/: configMap.yaml
deployment/docker-compose/mariadb/: docker-compose.yaml
deployment/docker-compose/postgresql/: docker-compose.yaml
deployment/docker-compose/test/: docker-compose.yaml
deployment/postgresql/base/: deployment.yaml  kustomization.yaml  service.yaml
locallibrary/: .env.example  .my_pgpass  .pg_service.conf
locallibrary/catalog/: admin.py  forms.py  models.py  urls.py  views.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_language.py  0002_mymodel_rename_date_of_birth_author_year_of_birth.py  0003_alter_book_author_alter_book_title.py  0003_rename_date_of_death_author_year_of_death.py  0004_bookinstance_borrower.py  0005_alter_bookinstance_options.py  0006_delete_mymodel_alter_author_year_of_birth_and_more.py  0007_alter_author_year_of_birth_and_more.py  0008_alter_author_year_of_birth_and_more.py  0009_alter_author_year_of_birth_and_more.py  0010_alter_author_year_of_birth_and_more.py  0012_author_year_of_birth_author_year_of_death.py  (+5 more)
locallibrary/init_scripts/: init_csm_user.py
locallibrary/locallibrary/: settings.py  urls.py
misc/html/: forms.html
misc/python/: custom-model-fields01.py  forms_sample01.py  insert_sys.py  test_django01.py  test_django02.py  test_gunicorn01.py  test_settings01.py
resources/: resources.md
(+16 files in other folders)
