[tool.poetry]
name = "local-library-website"
version = "0.1.0"
description = "For Django Tutorial: The Local Library website"
authors = ["hong <j50508@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "local_library_website"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"
psycopg = {extras = ["binary", "pool"], version = "^3.1.9"}
django-environ = "0.10.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
diagrams = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
